mejoras de ejemplos 60 y 61 para evitar fallo de hibernate con java 9+